fix image stretching

--- a/styles.css
+++ b/styles.css
@@ -14,16 +14,35 @@ html {
     background-color: black;
 }
 
+.fab{
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 1rem;
+    width: 1rem;
+    height: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    fill:rgba(0, 0, 0, 0.158) !important;
+}
+
 .backgroundgradient, .backgroundimg {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     animation: bg 1s;
-    width: 100vw;
+    width: 100vh;
     height: 100vh;
+    display: block;
+    object-fit: cover;
     position: fixed;
     top: 0;
     left: 0;
+    display: block;
+    min-height: 100vh;
+    min-width: 100vw;
 }
 
 .backgroundgradient {
@@ -33,7 +52,7 @@ html {
 
 .backgroundimg {
     opacity: 0;
-    transition: all 1s ease;
+    transition: opacity 1s ease;
     z-index: -2;
 }
 
@@ -66,6 +85,10 @@ body {
 
 .centered * {
     text-align: center;
+}
+
+.hidden {
+    display: none;
 }
 
 .watermark {
